--- a/index.html
+++ b/index.html
@@ -5,18 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <div class="context-menu" id="contextMenu">
         <div class="circle">
             <div class="segment"></div>
             <div class="segment"></div>
-            <div class="slice slice1"></div>
-            <div class="slice slice2"></div>
-            <div class="slice slice3"></div>
-            <div class="slice slice4"></div>
+            <div class="slice slice1">
+                <span class="material-symbols-outlined home">
+                    home
+                    </span>
+            </div>
+            <div class="slice slice2">
+                <span class="material-symbols-outlined logout">
+                    logout
+                    </span>
+            </div>
+            <div class="slice slice3">
+                <span class="material-symbols-outlined account_circle">
+                    account_circle
+                    </span>
+            </div>
+            <div class="slice slice4">
+                <span class="material-symbols-outlined notifications">
+                    notifications
+                    </span>
+            </div>
             <div class="CenterCircle"></div>
             <div class="MiniCenterCircle"></div>
+
         </div>
         
     </div>
