--- a/index.html
+++ b/index.html
@@ -12,26 +12,19 @@
         <div class="circle">
             <div class="segment"></div>
             <div class="segment"></div>
-            <div class="slice slice1">
-                <span class="material-symbols-outlined home">
-                    home
-                    </span>
+            <div class="slice slice1" data-page="home">
+                <span class="material-symbols-outlined quick home">home</span>
             </div>
-            <div class="slice slice2">
-                <span class="material-symbols-outlined logout">
-                    logout
-                    </span>
+            <div class="slice slice2" data-page="logout">
+                <span class="material-symbols-outlined quick logout">logout</span>
             </div>
-            <div class="slice slice3">
-                <span class="material-symbols-outlined account_circle">
-                    account_circle
-                    </span>
+            <div class="slice slice3" data-page="account">
+                <span class="material-symbols-outlined quick account_circle">account_circle</span>
             </div>
-            <div class="slice slice4">
-                <span class="material-symbols-outlined notifications">
-                    notifications
-                    </span>
+            <div class="slice slice4" data-page="notifications">
+                <span class="material-symbols-outlined quick notifications">notifications</span>
             </div>
+            
             <div class="CenterCircle"></div>
             <div class="MiniCenterCircle"></div>
 
